clusters/main/kubernetes/apps/homepage/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  annotations:
    volsync.backube/privileged-movers: "true"
  labels:
    goldilocks.fairwinds.com/enabled: "true"
